# AlexPLM

./: .gitignore  CONTEXT.md  mkdocs.yml
.claude/skills/release-werkbank/: SKILL.md
.claude/skills/release-werkbank/scripts/: setze-version.sh
.claude/skills/run-werkbank/: SKILL.md
.claude/skills/run-werkbank/scripts/: launch.sh  stop.sh
.github/workflows/: docs.yml  windows-installer.yml
app/: package.json  pnpm-lock.yaml  vite.config.js
app/src/: app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/.cargo/: config.toml
app/src-tauri/resources/bibliothek/bausteine/: doku.json  fusion.json  kicad.json  platformio.json  zephyr.json
app/src-tauri/resources/bibliothek/toolstacks/: standard-hw.json
app/src-tauri/resources/git/: .gitignore  README.md
app/src-tauri/src/: artstore.rs  askpass.rs  aufgabenblock.rs  aufgabenblockglue.rs  autocommit.rs  autolock.rs  baustein.rs  bibliothek.rs  classifier.rs  compose.rs  composeglue.rs  credentials.rs  defaultkanten.rs  edges.rs  edgestore.rs  exportglue.rs  feedback.rs  forgejo.rs  freigabegate.rs  freigabegateglue.rs  gitlog.rs  gitrunner.rs  graph.rs  graphread.rs  import.rs  import_gate.rs  integrationsblock.rs  integrationsblockglue.rs  kartenstatus.rs  knotenverben.rs  konto.rs  lib.rs  lockglue.rs  locks.rs  main.rs  markerblock.rs  nestedboundary.rs  offlinelock.rs  offlinelockglue.rs  onboardglue.rs  (+24 more)
app/src-tauri/tests/: auth_keyring.rs  autocommit_watch.rs  bibliothek_antidrift.rs  edges_stale.rs  export_plain_folders.rs  graph_projection.rs  honest_git_nouns.rs  import_clean_init.rs  import_gate_io.rs  konto_clear.rs  nested_boundary.rs  plm_file_per_entry.rs  projection_walk.rs  push_warden.rs  recovery_transaction.rs  registry_search.rs  setup_ceremony.rs  stack_anlegen.rs  status_reader.rs  sync_decider.rs  tasks_store.rs  watcher_autolock.rs
app/src/lib/: AbgleichBeimOeffnen.svelte  ArtefaktKarte.svelte  ArtifactCard.svelte  AufgabenListe.svelte  BibliothekAnsicht.svelte  DiagnoseLog.svelte  EinrichtungsZeremonie.svelte  ForeignLocksPanel.svelte  FreigabeGate.svelte  GateTaste.svelte  GraphRaum.svelte  HistorieGate.svelte  KontoPanel.svelte  LauteAusnahme.svelte  Led.svelte  MeldeProblem.svelte  ProduktSuche.svelte  Produktliste.svelte  Sicherungsstatus.svelte  StackEinrichtung.svelte  StandList.svelte  UnzugeordnetFach.svelte  VersionBar.svelte  VersionTree.svelte  Versionsschild.svelte  Zusammenstellung.svelte  bindings.ts  commands.ts  statusPulse.svelte.ts  tokens.css  types.ts  verlauf.ts
app/src/lib/bibliothek/: BausteinEditor.svelte  validate.ts
app/src/lib/bibliothek/parts/: GlobListe.svelte  KantenEditor.svelte  MusterListe.svelte  OeffnenWahl.svelte  PaarKantenEditor.svelte  RekonstruierbarEditor.svelte  StartaufgabenEditor.svelte
app/src/routes/: +page.svelte
design-docs/: entscheidungslog-1.md  entscheidungslog-2.md  entscheidungslog-3.md  entscheidungslog-4.md  entscheidungslog-5.md  entscheidungslog-6.md  entscheidungslog.md  glossar-1.md  glossar-2.md  glossar-3.md  glossar-4.md  glossar.md  plm_software_konzept.md  ui-stilbeschreibung.md  v2-gap-analyse.md  v2-prd-luecken.md
design-docs/adr/: 0001-desktop-stack.md  0002-plm-store-layout.md  0003-bibliothek-baustein-anti-drift.md  0004-globales-konto.md
docs/: index.md
docs-tooling/: README.md  requirements.txt
docs-tooling/screenshots/: capture.mjs  package-lock.json  package.json
docs-tooling/wiki/: README.md  convert.py
docs-wiki/: Aufgaben-und-Hinweise.md  Bausteine-und-Werkzeugkasten.md  Die-Oberflaeche.md  Erstes-Produkt.md  Git-Ehrlichkeit.md  Glossar.md  Home.md  Konzepte-Ueberblick.md  Mehrbenutzer-und-Sync.md  Produkt-Arbeitsbereich-Artefakt.md  Produkt-teilen.md  Status-LEDs.md  Versionen-und-Meilensteine.md  Versionen-und-Revisionen.md  Voraussetzungen.md  Werkbank-und-Graph-Raum.md  _Footer.md  _Sidebar.md
docs/erste-schritte/: erstes-produkt.md  teilen.md  voraussetzungen.md
docs/konzepte/: aufgaben.md  bausteine.md  git-ehrlichkeit.md  mehrbenutzer.md  produkt-struktur.md  ueberblick.md  versionen.md  werkbank-graph.md
docs/referenz/: glossar.md  oberflaeche.md  status-leds.md
docs/stylesheets/: extra.css
