[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
# Cross-platform OS keystore for the auth token (Issue #22). The token lives in the
# native keystore, never in `.git/config`; git pulls it at runtime via the askpass helper.
keyring = { version = "3", default-features = false }

# Linux: GNOME Keyring / KWallet over the Secret Service (D-Bus). `crypto-rust` keeps the
# encrypted session pure-Rust; `vendored` statically links libdbus so no system -dev pkg is
# needed at build time. The token persists across reboots — a true OS keystore.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = [
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }

# Windows: the native Credential Manager (DPAPI-backed).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

