[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dev-dependencies]
tempfile = "3"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
notify = "8"
# Single source of truth for the frontend command seam (Candidate B): every #[tauri::command]
# carries #[specta::specta], and a tauri_specta::Builder exports the typed bindings + domain types
# to ../src/lib/bindings.ts at debug build time. A Rust signature change becomes a frontend compile
# error instead of a silent runtime drift; types.ts is no longer hand-mirrored.
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
# Cross-platform OS keystore for the auth token (Issue #22). The token lives in the
# native keystore, never in `.git/config`; git pulls it at runtime via the askpass helper.
keyring = { version = "3", default-features = false }
# Minimal HTTP client for the Forgejo/Gitea REST API: "Veröffentlichen" creates the repository
# server-side before the first push (the server answers "Not found" otherwise). `rustls-tls` keeps
# TLS pure-Rust so no system OpenSSL -dev package is needed at build time; only the blocking client
# is used (called inside the command's `spawn_blocking`).
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }

# Linux: GNOME Keyring / KWallet over the Secret Service (D-Bus). `crypto-rust` keeps the
# encrypted session pure-Rust; `vendored` statically links libdbus so no system -dev pkg is
# needed at build time. The token persists across reboots — a true OS keystore.
[target.'cfg(target_os = "linux")'.dependencies]
keyring = { version = "3", default-features = false, features = [
    "sync-secret-service",
    "crypto-rust",
    "vendored",
] }

# Windows: the native Credential Manager (DPAPI-backed).
[target.'cfg(windows)'.dependencies]
keyring = { version = "3", default-features = false, features = ["windows-native"] }

# Unix: kill a timed-out git's whole process group (gitrunner), so an orphaned git-lfs child can
# never keep looping on a rejected credential after we give up on it.
[target.'cfg(unix)'.dependencies]
libc = "0.2"

